fix(extended-1.1): adding and changing tags for correct semantics + refactor(basic-1.1): add whitespace

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   font-family: lato, sans-serif;
 }
 
-.div-main {
+.article-head {
   width: 500px;
   margin: 0 auto;
   display: block;
@@ -22,7 +22,7 @@
 
 @media (max-width:768px) {
 
-  .div-main { text-align: center;
+  .article-head{ text-align: center;
   }
 
 }
@@ -31,6 +31,10 @@
   display: block;
   width: 500px;
   margin: 0 auto 0;
+}
+
+.add-item-section {
+  margin: 1em auto;
 }
 
 .task {
@@ -73,8 +77,7 @@ button:hover {
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+h3 {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -102,7 +105,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+.h3-add-item {
   display: block;
   margin: 0 0 20px;
 }
